--- a/1_medallion_processing_dim/1_dim_bronze.ipynb
+++ b/1_medallion_processing_dim/1_dim_bronze.ipynb
@@ -447,8 +447,8 @@
     "    StructField(\"color\", StringType(), True),\n",
     "    StructField(\"size\", StringType(), True),\n",
     "    StructField(\"material\", StringType(), True),\n",
-    "    StructField(\"weight_grams\", StringType(), True),  #datatype is string due to incoming data contain anamolies\n",
-    "    StructField(\"length_cm\", StringType(), True),     #datatype is string due to incoming data contain anamolies\n",
+    "    StructField(\"weight_grams\", StringType(), True),  \n",
+    "    StructField(\"length_cm\", StringType(), True),     \n",
     "    StructField(\"width_cm\", FloatType(), True),\n",
     "    StructField(\"height_cm\", FloatType(), True),\n",
     "    StructField(\"rating_count\", IntegerType(), True),\n",
@@ -456,14 +456,14 @@
     "    StructField(\"ingest_timestamp\", TimestampType(), False)\n",
     "])\n",
     "\n",
-    "# Load data using the schema defined\n",
+    "\n",
     "raw_data_product = \"/Volumes/ecommerce/source_data/raw/products/*.csv\"\n",
     "\n",
     "df_product = spark.read.option(\"header\", \"true\").option(\"delimiter\", \",\").schema(products_schema).csv(raw_data_product) \\\n",
     "    .withColumn(\"file_name\", F.col(\"_metadata.file_path\")) \\\n",
     "    .withColumn(\"ingest_timestamp\", F.current_timestamp())\n",
     "\n",
-    "# Write raw data to the Bronze layer (catalog: ecommerce, schema: bronze, table: brz_products)\n",
+    "\n",
     "df_product.write.format(\"delta\") \\\n",
     "    .mode(\"overwrite\") \\\n",
     "    .option(\"mergeSchema\", \"true\") \\\n",
